<resources>
    <string name="app_name">HiRoom</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- labels for menu -->
    <string name="new_search">Nueva búsqueda</string>
    <string name="new_advertisement">Nuevo anuncio</string>
    <string name="yours_advertisements">Tus anuncios</string>
    <string name="log_out">Logout</string>
    <string name="about">Acerca de</string>

    <!--labels login form -->
    <string name="email">Email</string>
    <string name="password">Contraseña</string>
    <string name="sign_up">¿No eres miembro? Regístrate ahora</string>
    <string name="login">Login</string>
    <string name="networkError">Ups, algo salió mal</string>
    <string name="jsonError">Vaya, algo ha salido mal</string>
    <string name="invalidUser">Usuario o contraseña incorrectos</string>

    <!-- error labels for login and register activities -->
    <string name="error_email">Introduzca una direccion de email valida</string>
    <string name="error_pass">Debe tener una longitud de al menos 4 caracteres</string>
    <string name="error_name">Introduzca un nombre</string>

    <!-- labels for register form -->
    <string name="name">Nombre</string>
    <string name="register">Regístrate</string>
    <string name="sign_in">¿Ya registrado? Inicia sesión</string>
    <string name="alreadyExists">El email ya está en uso</string>

    <!-- label for login dialog -->
    <string name="authenticating">Authenticating...</string>

    <!-- labels for search fragment -->
    <string name="publish_your_room">Publica tu anuncio</string>

    <!-- labels for profile -->
    <string name="about_me">Acerca de mi</string>
    <string name="partying">Fiestero</string>
    <string name="organized">Organizado</string>
    <string name="athlete">Deportista</string>
    <string name="freak">Friki</string>
    <string name="sociable">Sociable</string>
    <string name="active">Activo</string>
    <string name="repoprt">Denunciar Usuario</string>
    <string name="smoker">smoker</string>
    <string name="gender">gender</string>

    <!-- labels for search fragment -->
    <string name="edit_search">Cidudad, Barrio, Localidad…</string>
    <string name="search">Buscar</string>

    <!-- labels for about fragment -->
    <string name="volley">Volley</string>
    <string name="google">Google</string>
    <string name="explain_volley">Volley is a Google library for Android that makes networking and remote image loading easier and faster.</string>
    <string name="gson">Gson</string>
    <string name="explain_gson">Gson is a Java library that can be used to convert Java Objects into their JSON representation. It can also be used to convert a JSON string to an equivalent Java object. Gson can work with arbitrary Java objects including pre-existing objects that you do not have source-code of.\n \n There are a few open-source projects that can convert Java objects to JSON. However, most of them require that you place Java annotations in your classes; something that you can not do if you do not have access to the source-code. Most also do not fully support the use of Java Generics. Gson considers both of these as very important design goals.</string>
    <string name="version">Version actual 1.0</string>
    <string name="open_source">Software open source</string>


    <!-- labels for edit profile-->
    <string name="editName">Nombre</string>
    <string name="editSurname">Apellido</string>
    <string name="editBirthdate">Fecha de nacimiento</string>
    <string name="editCity">Ciudad de residencia(actual)</string>
    <string name="editGender">¿Cuál es tu género?</string>
    <string name="editWorker">¿Y tu situación?</string>
    <string name="editDefine">Me defino como…</string>
    <string name="editAbout">Un poco acerca de mi</string>
    <string name="editAboutHint">Cuenta un poquito sobre ti para que la gente te conozca</string>
    <string name="editSave">guardar</string>


    <string name="title_activity_profile">ProfileActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
        Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.
        Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi.
    </string>


</resources>
