<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".fragment.AboutFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <TextView
            android:id="@+id/version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/version"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/opensource"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/version"
            android:text="@string/open_source" />
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/opensource"
            android:scrollbars="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                    xmlns:card_view="http://schemas.android.com/apk/res-auto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    card_view:cardCornerRadius="3dp"
                    card_view:cardElevation="4dp"
                    card_view:cardUseCompatPadding="true">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp">

                        <TextView
                            android:id="@+id/volley"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/volley"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_marginEnd="10dp"
                            android:text="@string/google" />

                        <View
                            android:id="@+id/dividerGoogle"
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_below="@+id/volley"
                            android:layout_marginBottom="10dp"
                            android:layout_marginTop="10dp"
                            android:background="@android:color/darker_gray" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/dividerGoogle"
                            android:text="@string/explain_volley" />

                    </RelativeLayout>
                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                    xmlns:card_view="http://schemas.android.com/apk/res-auto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    card_view:cardCornerRadius="3dp"
                    card_view:cardElevation="4dp"
                    card_view:cardUseCompatPadding="true">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp">

                        <TextView
                            android:id="@+id/Gson"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/gson"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_marginEnd="10dp"
                            android:text="@string/google" />

                        <View
                            android:id="@+id/dividerGson"
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_below="@+id/Gson"
                            android:layout_marginBottom="10dp"
                            android:layout_marginTop="10dp"
                            android:background="@android:color/darker_gray" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/dividerGson"
                            android:text="@string/explain_gson" />

                    </RelativeLayout>
                </android.support.v7.widget.CardView>
            </LinearLayout>
        </ScrollView>
    </RelativeLayout>

</FrameLayout>